@@ -69,6 +69,31 @@ BEGIN {
     }
 
     print "/* This file automatically generated by command_data.awk */"
+    print
+    print "/* Useful aliases */"
+    print "#define CM_hex_09 CM_TAB"
+    print "#define CM_hex_0a CM_NEWLINE"
+    print "#define CM_hex_20 CM_SPACE"
+    print "#define CM_hex_21 CM_EXCLAMATION_MARK"
+    print "#define CM_hex_22 CM_POUND_SIGN"
+    print "#define CM_hex_27 CM_BACKQUOTE"
+    print "#define CM_hex_2a CM_ASTERISK"
+    print "#define CM_hex_2c CM_COMMA"
+    print "#define CM_hex_2d CM_HYPHEN"
+    print "#define CM_hex_2e CM_FULL_STOP"
+    print "#define CM_hex_2f CM_SLASH"
+    print "#define CM_hex_3a CM_COLON"
+    print "#define CM_hex_3d CM_EQUALS"
+    print "#define CM_hex_3f CM_QUESTION_MARK"
+    print "#define CM_hex_40 CM_AT_SIGN"
+    print "#define CM_hex_5c CM_BACKSLASH"
+    print "#define CM_hex_5e CM_CIRCUMFLEX"
+    print "#define CM_hex_60 CM_BACKQUOTE"
+    print "#define CM_hex_7b CM_OPEN_BRACE"
+    print "#define CM_hex_7c CM_VERTICAL_BAR"
+    print "#define CM_hex_7d CM_CLOSE_BRACE"
+    print "#define CM_hex_7e CM_TILDE"
+    print
     print "enum command_id {"
     print "CM_NONE,"
     print
