@@ -1,4 +1,29 @@
 /* This file automatically generated by command_data.awk */
+
+/* Useful aliases */
+#define CM_hex_09 CM_TAB
+#define CM_hex_0a CM_NEWLINE
+#define CM_hex_20 CM_SPACE
+#define CM_hex_21 CM_EXCLAMATION_MARK
+#define CM_hex_22 CM_POUND_SIGN
+#define CM_hex_27 CM_APOSTROPHE
+#define CM_hex_2a CM_ASTERISK
+#define CM_hex_2c CM_COMMA
+#define CM_hex_2d CM_HYPHEN
+#define CM_hex_2e CM_FULL_STOP
+#define CM_hex_2f CM_SLASH
+#define CM_hex_3a CM_COLON
+#define CM_hex_3d CM_EQUALS
+#define CM_hex_3f CM_QUESTION_MARK
+#define CM_hex_40 CM_AT_SIGN
+#define CM_hex_5c CM_BACKSLASH
+#define CM_hex_5e CM_CIRCUMFLEX
+#define CM_hex_60 CM_BACKQUOTE
+#define CM_hex_7b CM_OPEN_BRACE
+#define CM_hex_7c CM_VERTICAL_BAR
+#define CM_hex_7d CM_CLOSE_BRACE
+#define CM_hex_7e CM_TILDE
+
 enum command_id {
 CM_NONE,
 
